[project]
name = "SeattleCrimeData_analysis"
version = "0.1.0"
description = "Seattle Crime Data Analysis Pipeline using Dagster with Streamlit Dashboard"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "requests",
    "pymongo",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "streamlit>=1.24.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "SeattleCrimeData_analysis.definitions"
code_location_name = "SeattleCrimeData_analysis"
